--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           </button>
 
           <a class="navbar-brand font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="/">
-            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxJMI"/>
+            <img class="logo-navbar-dark" src="res/images/logos/logo-fachschaft_aktuell.png" alt="TEDxJMI"/>
             <img class="logo-navbar-white" src="res/images/logos/logo-fachschaft_aktuell.png" alt="TEDxJMI"/>
           </a>
         </div>
