--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./img/logo_transparent.png" alt="">
+      <img class="logo" src="./img/logo-fachschaft_aktuell.png" alt="">
       <div class="dropdown">
           <div class="menu">
             <a href="./html/project.html">PROJEKT</a>
