--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <main>
-    <img class="titelimg" src="./img/Hintergrund1.jpg" alt="">
+    <img class="titelimg" src="./img/Titelbild.jpg" alt="">
       <div class="project-container">
         <div class="project">
             <img src="./img/Anna.jpg" alt="">
